# newrelic-opentelemetry-examples

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: example-addition.md
.github/config/: markdown-link-check-config.json
.github/workflows/: otlp_nr_mapping.yml  pull_request.yml  repolinter.yml  snyk.yml
appathon/: README.md  call-app.sh  docker-compose.yaml  load-generator.sh
appathon/dotnet/: Dockerfile  Program.cs  dotnet.csproj
appathon/go/: Dockerfile  go.mod  go.sum  main.go
appathon/java/: Dockerfile  README.md  build.gradle  settings.gradle
appathon/javascript/: .dockerignore  Dockerfile  README.md  fib.js  index.js  package-lock.json  package.json  tracing.js
appathon/python/: Dockerfile  app.py  main.py  requirements.txt
aws-lambda/dotnet/: .gitignore  README.md  template.yml
aws-lambda/java/: .gitignore  README.md  collector.yaml  template.yaml
collector/: README.md  docker-compose.yaml  otel-config.yaml
collector/filelogreceiver/: Dockerfile  README.md  collector.yaml  docker-compose.yaml
collector/k8s-collector-tail-sampling/: README.md
collector/nr-exporter-docker/: README.md  docker-compose.yaml  otel-config.yaml
getting-started-guides/: .env  .gitignore  README.md  compose.yaml  demo-app-specification.md
getting-started-guides/cpp/: CMakeLists.txt  Dockerfile  main.cpp
getting-started-guides/rust/: Cargo.toml  Dockerfile  README.md
getting-started-guides/rust/src/: main.rs
go/: README.md  app.go  go.mod  go.sum  main.go  metrics.go  traces.go
infrastructure/: README.md  docker-compose.yaml  otel-agent-dotnet-config.yaml  otel-agent-infrastructure-config.yaml  otel-collector-config.yaml
java/: .snyk  build.gradle  gradle.properties  gradlew  settings.gradle
js/: index.html  package-lock.json  package.json  tracer.js  webpack.config.js
python/: README.md  app.py  main.py  metrics.py  requirements.txt
ruby/: Gemfile  README.md  fibonacci.rb  myapp.rb  opentelemetry.rb
(+798 files in other folders)
