[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-web-opentelemetry = "0.18.0"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version =  "0.16.0", features = ["tls-roots"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
serde = { version = "1.0.205", features = ["derive"] }
