[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-web-opentelemetry = "0.19.0"
opentelemetry = "0.24.0"
opentelemetry-otlp = { version =  "0.17.0", features = ["tls-roots", "gzip-tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
serde = { version = "1.0.205", features = ["derive"] }
tonic = "0.12.1"
